tests/paczka1/fuzzy1/20397888.err
Error in line 22: gVQplwK A405 23,7
Error in line 27: Idk A897 73,0
Error in line 31: Idk A943 78,6
